# Workspace

./: .editorconfig  .gitignore  README.md  TODO.md  b  flake.nix
.cargo/: config.toml
buildscript/: Cargo.toml  README.md
buildscript/assets/: Cargo.toml.in  settings.gradle.in  shared.repos.gradle.in  shared.settings.gradle  shared.settings.gradle.in
buildscript/src/: args.rs  fs2.rs  main.rs  syncfs.rs  targets.rs  util.rs
buildscript/src/targets/: NiMetadata.java  castle.rs  coreplugin.rs  coreutils.rs  forts.rs  hexed.rs  hub.rs  java-version-check.java  java.rs  mindurkabot.rs  mindurkansfwdetector.rs  mindustry.rs  mprocs.rs  newtd.rs  rabbitmq.rs  surrealdb.rs
sql/: init.surrealql  init.surrealql.in
