[package]
name = "buildscript"
version = "0.1.0"
edition = "2024"

[target.'cfg(unix)'.dependencies]
flate2 = "1.1.2"
tar = "0.4.44"
xz = "0.1.0"

[dependencies]
# bzip2 = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
tera = "1.20.1"
ureq = "3.0.12"
sha2 = "0.11.0"
zip = { version = "8.4.0", default-features = false, features = ["deflate"] }
